rename/move+delete no longer overlap with text. fixes #85

--- a/src/frontend/css/common.css
+++ b/src/frontend/css/common.css
@@ -104,6 +104,12 @@ body {
   font-variant: small-caps;
 }
 
+#current-file-controls {
+  border: 1px solid #ddd;
+  border-top: none;
+  border-bottom-color: #eee;
+}
+
 #console {
 }
 
